fix: z-index on a few components to be over dashboard content

--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -7,7 +7,7 @@
   top: 75px;
   margin-right: 1rem;
   transition: all 0.5s ease;
-  z-index: 1;
+  z-index: 2;
 
   &__header {
     background-color: white;
