--- a/src/components/ProfileDropdown/ProfileDropdown.module.scss
+++ b/src/components/ProfileDropdown/ProfileDropdown.module.scss
@@ -7,6 +7,7 @@
   width: 265px;
   height: auto;
   border-radius: 0.25rem;
+  z-index: 1;
 
   &__header {
     padding: 1rem;
